--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.3.2",
     "@testing-library/user-event": "7.1.2",
+    "@vaadin/vaadin-button": "^2.3.0",
+    "@vaadin/vaadin-grid": "^5.6.6",
+    "@vaadin/vaadin-text-field": "^2.7.0-beta1",
     "@webcomponents/webcomponentsjs": "2.4.4",
     "react": "^16.13.1",
     "react-dom": "16.13.1",
