--- a/package.json
+++ b/package.json
@@ -3,14 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "4.2.4",
-    "@testing-library/react": "9.3.2",
-    "@testing-library/user-event": "7.1.2",
-    "@vaadin/vaadin-button": "^2.3.0",
-    "@vaadin/vaadin-grid": "^5.6.6",
-    "@vaadin/vaadin-text-field": "^2.7.0-beta1",
     "@webcomponents/webcomponentsjs": "2.4.4",
-    "history": "^5.0.0",
+    "history": "4.10.1",
     "react": "^16.13.1",
     "react-dom": "16.13.1",
     "react-router-dom": "5.2.0",
